--- a/src/main/angular/src/app/login/login.component.html
+++ b/src/main/angular/src/app/login/login.component.html
@@ -4,6 +4,7 @@
     
     <div *ngIf="userInfo">
         {{userInfo.userName}}
+       Drive Info: <app-drive></app-drive>
     </div>
     <h1 >
       Welcome to Personal Dashboard!
