--- a/src/main/angular/src/app/navbar/navbar.component.html
+++ b/src/main/angular/src/app/navbar/navbar.component.html
@@ -3,10 +3,10 @@
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active" *ngIf="isAuthenticated() | async">
-          <a class="nav-link" [routerLink]='["logout"]'>Logout <span class="sr-only">(current)</span></a>
+          <a class="nav-link" >Logout <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active" *ngIf="!(isAuthenticated() | async)">
-            <a class="nav-link" [routerLink]='["user"]' >Login <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/login" >Login <span class="sr-only">(current)</span></a>
           </li>
       </ul>
     </div>
