--- a/src/main/angular/src/app/github/github.component.html
+++ b/src/main/angular/src/app/github/github.component.html
@@ -7,5 +7,5 @@
   <div class="col-4">more info</div>
 </div>
 <div *ngIf="!githubInfo">
-  <a class="nav-link" href="pdb-gateway/login/github" >Login with github<span class="sr-only">(current)</span></a>
+  <a class="nav-link" href="/login/github" >Login with github<span class="sr-only">(current)</span></a>
 </div>
