--- a/src/main/angular/src/app/navbar/navbar.component.html
+++ b/src/main/angular/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
           <a class="nav-link" >Logout <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active" *ngIf="!(isAuthenticated() | async)">
-            <a class="nav-link" href="pdb-gateway/home" >Login<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="home" >Login<span class="sr-only">(current)</span></a>
             
           </li>
       </ul>
